add function decomp to addFav and removeFav, added pointer

--- a/css/stories.css
+++ b/css/stories.css
@@ -1,5 +1,4 @@
 /* Lists of stories */
-/* TODO: add pointer */
 .stories-list {
   margin: 20px 5px;
 }
@@ -36,4 +35,10 @@
 
 .story-user {
   display: block;
+}
+
+/* Star element cursor change */
+
+.star {
+  cursor: pointer;
 }
