Edit css to properly style favorites and my stories and get my stories nav button to work

--- a/css/stories.css
+++ b/css/stories.css
@@ -1,9 +1,9 @@
 /* Lists of stories */
-.stories-list {
+.stories-list, #favorites-list, #mystories-list {
   margin: 20px 5px;
 }
 
-.stories-list > li {
+.stories-list > li, #favorites-list > li, #mystories-list > li {
   color: gray;
   font-size: 0.8rem;
   margin: 10px 0;
